--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@babel/preset-env": "7.23.9",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
+    "@stylexjs/babel-plugin": "^0.5.1",
+    "@stylexjs/eslint-plugin": "^0.5.1",
+    "@stylexjs/webpack-plugin": "^0.5.1",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "babel-loader": "9.1.3",
@@ -39,6 +42,7 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
+    "@stylexjs/stylex": "^0.5.1",
     "react-router-dom": "^6.21.3"
   }
 }
