project setup and initial theme creation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,37 @@
 {
   "compilerOptions": {
-    // Emit Configuration
-    "noEmit": true,
+    /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
-    // Type Checking Configuration
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
+    /* Basic Options */
+    // "incremental": true,                         /* Enable incremental compilation */
+    "target": "ESNEXT" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
+    "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+    "allowJs": true,
+    "checkJs": false,
+    "outDir": "dist",
+    "rootDir": ".",
+    "strict": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "strictNullChecks": true,
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "sourceMap": false,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "jsx": "react",
     "noImplicitThis": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitOverride": true,
     "noImplicitAny": true,
-    "noImplicitReturns": true,
-    // Strict Rules - v4.8
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "useUnknownInCatchVariables": true,
-
-    // Modules Configuration
-    "baseUrl": "./",
-    "module": "ES2022",
-    "moduleResolution": "node",
-
-    // Language and Environment Configuration
-    "target": "ES2022",
-    "jsx": "react-jsx",
-
-    // JavaScript Support Configuration
-    "allowJs": true,
-    "checkJs": true,
-
-    // Interop Constraints Configuration
-    "esModuleInterop": true,
-    "isolatedModules": true
+    "paths": {
+      "#root/*": ["./*"],
+      "#src/*": ["./src/*"]
+    }
   },
-  "include": ["src/**/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"],
+  "include": ["./src", "./*"]
 }
