--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack --config webpack.config.js --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tscheck": "tsc"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "babel-loader": "9.1.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "css-loader": "6.9.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.6.0",
